2015-12-18 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.033_02)
* Made tests more robust after CPAN Testers failures.

2015-12-15 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.033_01)
* Raise minimum DBI version to 1.609 (from 2009!) in order to make
  tests pass on RHEL5.
* Add explicit documentation for how to enable SSL at build time,
  provided by genio.
* Improve test suite to make it more robust using mixed versions of client and
  server.
* Fix use after free error in my_login, provided by hannob.
* Add explicit instructions stating brackets are required around ipv6-addresses
  in connection strings, provided by Kenny Gryp.

2015-10-26 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.033)
* Full-release to include 03.

2015-10-25 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.032_03)
* Use mysql_get_option to read net_buffer_length and mysql_get_parameter
   where available, needed for MySQL 5.7.9. Patch from berntm @ Oracle.
   https://github.com/perl5-dbi/DBD-mysql/pull/42 
* Fix mysql_conn_attrs test when run against MySQL 5.1 server.
* Fix for memory leak to $sth->{ParamValues} , RT83051
    https://rt.cpan.org/Public/Bug/Display.html?id=83051
* Fixes for running test suite on MySQL 5.7.
* Fix running test suite with InnoDB disabled, reported by bor.

2015-07-20 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.032)
* Full-release to include 02 and 01.

2015-06-15 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.032_02)
* Added support for utf8mb4 by Daniël van Eeden and Eric Herman (Booking.com)
* Added patch for connection attributes in MySQL 5.6.6+, by Daniël van Eeden
   and Eric Herman (Booking.com).

2015-04-16 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.032_01)
* Fixed test rt88006-bit-prepare on MyISAM storage
   (Reported both in RT102657 and by Scimon on github)
* Fix for https://rt.cpan.org/Public/Bug/Display.html?id=102717 "Fritz" Friedrich Haubensak (hsk AT fli-leibniz DOT de)